fix overflow

--- a/public/css/base.css
+++ b/public/css/base.css
@@ -4,8 +4,7 @@ html, body {
   padding: 0;
   min-height: 100vh;
   height: 100%;
-  width: 100%;
-  overflow-x: hidden;
+  max-width: 100vw;
   background-color: var(--color-white);
 }
 
